Refactor: #137 - 구매, 사용 수량 통계 조회 시 date로 정렬 리팩토링